--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         </form>
         <div class="weather-status text-white text-center">
             <img src="https://openweathermap.org/img/wn/02d@2x.png" alt="">
-            <h1 id="country-name">London</h1>
-            <h3><span>38.06</span>&deg;C</h3>
-            <h1 class="lead">Clouds</h1>
+            <h1 id="country-name"></h1>
+            <h3><span id="country-temperature"></span>&deg;C</h3>
+            <h1 class="lead" id="weather-condition"></h1>
         </div>
     </div>
     <script src="js/app.js"></script>
