--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
         </form>
         <div class="weather-status text-white text-center">
-            <img src="https://openweathermap.org/img/wn/02d@2x.png" alt="">
+            <img alt="Not found" id="weather-icon" src="">
             <h1 id="country-name"></h1>
             <h3><span id="country-temperature"></span>&deg;C</h3>
             <h1 class="lead" id="weather-condition"></h1>
