--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </style>
 </head>
 
-<body>
+<body id="body">
     <div class="container">
         <form class="col-md-6 m-auto py-5">
             <div class="input-group mb-3">
@@ -29,10 +29,10 @@
                 </div>
             </div>
         </form>
-        <div class="weather-status text-white text-center">
-            <img alt="Not found" id="weather-icon" src="">
+        <div class="weather-status text-dark text-center">
+            <img id="weather-icon" src="">
             <h1 id="country-name"></h1>
-            <h3><span id="country-temperature"></span>&deg;C</h3>
+            <h3><span id="country-temperature"></span></h3>
             <h1 class="lead" id="weather-condition"></h1>
         </div>
     </div>
